--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
             <form class="transfer-form" onsubmit="event.preventDefault();">
                 <div class="form-group">
                     <label for="recipient">Empfänger</label>
-                    <input type="text" id="recipient" name="recipient" placeholder="Name des Empfängers" required>
+                    <input type="text" id="recipient" name="recipient" placeholder="Name des Empfängers">
                     <div class="error-message" id="error-recipient"></div>
                 </div>
 
                 <div class="form-group">
                     <label for="iban">IBAN</label>
-                    <input type="text" id="iban" name="iban" placeholder="DE12 3456 7890 ..." required>
+                    <input type="text" id="iban" name="iban" placeholder="DE12 3456 7890 ...">
                     <div class="error-message" id="error-iban"></div>
                 </div>
 
                 <div class="form-group">
                     <label for="amount">Betrag</label>
                     <div class="input-wrapper">
-                        <input type="number" id="amount" name="amount" placeholder="0,00" step="0.01" required>
+                        <input type="number" id="amount" name="amount" placeholder="0,00" step="0.01">
                         <span class="currency-symbol">€</span>
                     </div>
                     <div class="error-message" id="error-amount"></div>
@@ -62,12 +62,13 @@
 
                 <div class="form-group">
                     <label for="date">Ausführung am</label>
-                    <input type="date" id="date" name="date" required>
+                    <input type="date" id="date" name="date">
+                    <div class="error-message" id="error-date"></div>
                     <div class="checkbox-group">
                         <input type="checkbox" id="realtime" name="realtime">
                         <label for="realtime">Als Echtzeitüberweisung ausführen</label>
                     </div>
-                    <div class="error-message" id="error-date"></div>
+
                 </div>
 
                 <button type="submit" class="btn-execute">Ausführen</button>
