visually disable date field; improve iban formatting and default texts

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <div class="form-group">
                     <label for="iban">IBAN</label>
-                    <input type="text" id="iban" name="iban" placeholder="DE12 3456 7890 ...">
+                    <input type="text" id="iban" name="iban" placeholder="DE00 1111 2222 3333 4444 55">
                     <div class="error-message" id="error-iban"></div>
                 </div>
 
