added training mode

--- a/index.html
+++ b/index.html
@@ -146,8 +146,11 @@
     </div>
 
     <div id="success-overlay" class="overlay hidden">
-        <div class="success-checkmark">
+        <div class="success-checkmark" id="success-checkmark">
             <div class="check-icon"></div>
+        </div>
+        <div class="overlay-error-message hidden" id="overlay-error-message">
+            Name, IBAN oder Betrag ist nicht korrekt.
         </div>
     </div>
 
